# rust-mcp-toolkit

./: .eslintrc.json  Cargo.toml  README.md  declarations.d.ts  embedding_server.py  eslint.config.js  eslintrc.cjs  jest.config.cjs  jest.config.ts  package-lock.json  package.json  test.ts  tsconfig.json  worklog.md
src/: config.js  index.js  index.test.js  index.test.ts  index.ts
src/@types/modelcontextprotocol-sdk-types/: index.d.ts
src/@types/qdrant-js-client-rest/: index.d.ts
src/handlers/: toolHandlers.js  toolHandlers.ts
src/resources/: qdrant.js  qdrant.ts
src/scripts/: fetch_crate_docs.js  fetch_crate_docs.ts  test_qdrant.js  test_qdrant.ts
src/server/: server.js  server.ts
src/services/: common.js  common.ts  qdrant.js  qdrant.test.js  qdrant.test.ts  qdrant.ts
src/tools/: analyzeDependencies.js  analyzeDependencies.ts
