[package]
name = "rust-mcp-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
napi = { version = "2.0.0", features = ["napi4"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-analyzer = "0.3"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.0.0"
